[package]
name = "alex-hou-2024-test-19"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
console_error_panic_hook = { version = "0.1", optional = true }
dotenvy = { version = "0.15", optional = true }
leptos = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }
leptos_router = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring-webpki", "uuid", "chrono", "migrate", "macros"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
uuid = { version = "1", features = ["js", "serde", "v4"] }
wasm-bindgen = { version = "0.2", optional = true }

[features]
hydrate = [
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "leptos/hydrate",
]
ssr = [
    "dep:axum",
    "dep:dotenvy",
    "dep:leptos_axum",
    "dep:sqlx",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-subscriber",
    "leptos/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "alex-hou-2024-test-19"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "0.0.0.0:8080"
reload-port = 3001
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
